# CPPong

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Djipi/: Djipi.h  GameConfig.h  UserEvents.h
Djipi/utils/: GameObject.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h
include/: GameConfig.h
include/utils/: GameConfig.h  GameObject.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  UserEvents.h
src/: Ball.cpp  Ball.h  EntryPoint.cpp  Paddle.cpp  Paddle.h
src/utils/: GameObject.h  Timer.h
